--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ th {
   border-bottom: 2px solid #f9f5f5;
   padding-bottom: 10px;
 }
+.summary {
+  text-align: left;
+}
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
