--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,7 +12,7 @@
   width: 100%;
   margin-top: 2rem;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 .ingredients {
@@ -20,7 +20,7 @@
   text-align: left;
 }
 table {
-  width: 100%;
+  width: 45%;
 }
 td {
   border-bottom: 2px solid #ccc;
