--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,12 @@
 .main-ctn {
   width: 100%;
 }
+.sec-tables-ctn {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .table-ctn {
   width: 100%;
   margin-top: 2rem;
@@ -15,12 +21,27 @@
   justify-content: start;
   align-items: center;
 }
+.ingredients-ctn {
+  display: flex;
+  width: 75%;
+  flex-direction: column;
+}
+.ingredients-data-ctn {
+  width: 100%;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .ingredients {
   list-style: square;
   text-align: left;
 }
+ul.ingredients li {
+  margin-bottom: 0.2rem;
+}
 table {
-  width: 45%;
+  width: 100%;
 }
 td {
   border-bottom: 2px solid #ccc;
