--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,7 +12,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .table-ctn {
   width: 100%;
@@ -20,10 +20,16 @@
   display: flex;
   justify-content: start;
   align-items: center;
+  text-align: left;
 }
 .ingredients-ctn {
   display: flex;
   width: 75%;
+  flex-direction: column;
+}
+.recipes-ctn {
+  display: flex;
+  width: 100%;
   flex-direction: column;
 }
 .ingredients-data-ctn {
@@ -34,17 +40,24 @@
   align-items: center;
 }
 .ingredients {
-  list-style: square;
-  text-align: left;
+  width: 100%;
+  text-align: center;
 }
 ul.ingredients li {
   margin-bottom: 0.2rem;
+}
+.list-ingredient {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 table {
   width: 100%;
 }
 td {
   border-bottom: 2px solid #ccc;
+  padding: 5px 10px;
 }
 th {
   border-bottom: 2px solid #f9f5f5;
