--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,9 +32,28 @@
   width: 100%;
   flex-direction: column;
 }
+.global-chat-ctn {
+  width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.recipe-name-ctn {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.recipe-name-btn-ctn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .ingredients-data-ctn {
   width: 100%;
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,6 +71,19 @@ ul.ingredients li {
   justify-content: space-between;
   align-items: center;
 }
+.list-instruction {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0;
+}
+.list-instruction-step {
+  display: block;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 table {
   width: 100%;
 }
@@ -62,10 +94,9 @@ td {
 th {
   border-bottom: 2px solid #f9f5f5;
   padding-bottom: 10px;
+  text-align: center;
 }
-.summary {
-  text-align: left;
-}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
