Update Checkbox and CSS styles

--- a/src/tw/input.css
+++ b/src/tw/input.css
@@ -27,6 +27,9 @@ a:hover {
   color: #535bf2;
 }
 
+body {
+  background: radial-gradient(circle at center, #282c34 0%, #1c1e24 100%);
+}
 /* body {
     margin: 0;
     display: flex;
@@ -64,102 +67,20 @@ button:focus-visible {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
-.sec-tables-ctn {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-.table-ctn {
-  width: 100%;
-  margin-top: 2rem;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  text-align: left;
-}
-.ingredients-ctn {
-  display: flex;
-  width: 75%;
-  flex-direction: column;
-}
-.recipes-ctn {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-}
-.global-chat-ctn {
-  width: 100%;
-  margin-top: 2rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-}
-.recipe-name-ctn {
-  width: 100%;
-  text-align: left;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-}
-.recipe-name-btn-ctn {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.ingredients-data-ctn {
-  width: 100%;
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.ingredients {
-  width: 100%;
-  text-align: center;
-}
-ul.ingredients li {
-  margin-bottom: 0.2rem;
-}
-.list-ingredient {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.list-instruction {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 0;
-}
-.list-instruction-step {
-  display: block;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-}
 table {
   width: 100%;
 }
 td {
   border-bottom: 2px solid #ccc;
-  padding: 5px 10px;
+  padding: 3px 7px;
 }
 th {
   border-bottom: 2px solid #f9f5f5;
   padding-bottom: 10px;
   text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
 /* CHECKBOX */
@@ -172,7 +93,7 @@ th {
 }
 
 /* Hide the default checkbox */
-.container input {
+.checkbox-container input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -180,7 +101,7 @@ th {
   width: 0;
 }
 
-.container {
+.checkbox-container {
   display: block;
   position: relative;
   cursor: pointer;
@@ -202,7 +123,7 @@ th {
 }
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
+.checkbox-container input:checked ~ .checkmark {
   background-color: var(--clr);
   border-radius: 0.18rem;
   animation: pulse 500ms ease-in-out;
@@ -216,12 +137,12 @@ th {
 }
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
+.checkbox-container input:checked ~ .checkmark:after {
   display: block;
 }
 
 /* Style the checkmark/indicator */
-.container .checkmark:after {
+.checkbox-container .checkmark:after {
   left: 0.25em;
   top: 0.1em;
   width: 0.3em;
