--- a/src/tw/input.css
+++ b/src/tw/input.css
@@ -74,13 +74,11 @@ table {
   width: 100%;
 }
 td {
-  border-bottom: 2px solid #ccc;
   padding: 3px 7px;
 }
 th {
-  border-bottom: 2px solid #f9f5f5;
-  padding-bottom: 10px;
-  text-align: center;
+  @apply border-b-2 border-gray-500;
+  padding: 3px 7px;
 }
 
 /* CHECKBOX */
