--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -669,6 +669,21 @@ video {
   padding: 0px;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -760,14 +775,14 @@ table {
 }
 
 td {
-  border-bottom: 2px solid #ccc;
   padding: 3px 7px;
 }
 
 th {
-  border-bottom: 2px solid #f9f5f5;
-  padding-bottom: 10px;
-  text-align: center;
+  border-bottom-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+  padding: 3px 7px;
 }
 
 /* CHECKBOX */
