--- a/src/tw/input.css
+++ b/src/tw/input.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -42,6 +43,21 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+}
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply text-blueish-100;
+}
 
 button {
   border-radius: 8px;
@@ -77,13 +93,30 @@ td {
   padding: 3px 7px;
 }
 th {
-  @apply border-b-2 border-gray-500;
-  padding: 3px 7px;
+  @apply border-b-2 border-blueish-100;
+  padding: 15px 7px;
+}
+
+.font-montserrat {
+  font-family: "Montserrat", sans-serif;
+}
+.card {
+  @apply rounded-lg border-[1px] border-black/40 shadow-inner-shadow-dark-sm;
+}
+/*  */
+
+.shadow-inner-shadow-dark-sm {
+  --tw-shadow: 0px 1px 0px 0px hsla(0, 0%, 100%, 0.02) inset, 0px 0px 0px 1px hsla(0, 0%, 100%, 0.02) inset,
+    0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+  --tw-shadow-colored: inset 0px 1px 0px 0px var(--tw-shadow-color), inset 0px 0px 0px 1px var(--tw-shadow-color),
+    0px 0px 0px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 /* CHECKBOX */
 
 .checkbox-ctn {
+  @apply px-3;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,7 +142,7 @@ th {
 
 /* Create a custom checkbox */
 .checkmark {
-  --clr: #e09809;
+  --clr: #54669dff;
   position: relative;
   top: 0;
   left: 0;
