--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -580,6 +580,22 @@ video {
   }
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.top-0{
+  top: 0px;
+}
+
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
@@ -592,14 +608,6 @@ video {
 
 .mb-16{
   margin-bottom: 4rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
 }
 
 .mt-8{
@@ -618,12 +626,34 @@ video {
   height: 2rem;
 }
 
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .w-3\/4{
   width: 75%;
 }
 
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full{
   width: 100%;
+}
+
+.min-w-80{
+  min-width: 20rem;
+}
+
+.cursor-not-allowed{
+  cursor: not-allowed;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .list-none{
@@ -654,8 +684,20 @@ video {
   justify-content: space-between;
 }
 
-.gap-3{
-  gap: 0.75rem;
+.justify-evenly{
+  justify-content: space-evenly;
+}
+
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .rounded-tl-lg{
@@ -666,8 +708,24 @@ video {
   border-top-right-radius: 0.5rem;
 }
 
+.border-\[1px\]{
+  border-width: 1px;
+}
+
+.border-black\/30{
+  border-color: rgb(0 0 0 / 0.3);
+}
+
 .bg-blueish-400{
   background-color: #282C34FF;
+}
+
+.bg-def-300{
+  background-color: #5F5F5FFF;
+}
+
+.bg-transparent{
+  background-color: transparent;
 }
 
 .p-0{
@@ -679,14 +737,19 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2{
@@ -694,9 +757,9 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .text-left{
@@ -711,8 +774,31 @@ video {
   font-size: 1.5rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-medium{
+  font-weight: 500;
+}
+
 .capitalize{
   text-transform: capitalize;
+}
+
+.text-def-300{
+  color: #5F5F5FFF;
+}
+
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.ease-out{
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 :root {
@@ -741,15 +827,8 @@ a:hover {
 
 body {
   background: radial-gradient(circle at center, #282c34 0%, #1c1e24 100%);
+  min-height : 100vh;
 }
-
-/* body {
-    margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
-  } */
 
 h1 {
   font-size: 3.2em;
@@ -786,14 +865,10 @@ button {
   color: #e8e8e8;
 }
 
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
+/* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 #root {
   max-width: 1280px;
@@ -840,6 +915,31 @@ th{
   --tw-shadow-colored: inset 0px 1px 0px 0px var(--tw-shadow-color), inset 0px 0px 0px 1px var(--tw-shadow-color),
     0px 0px 0px 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.button-wave {
+  position: absolute;
+  background: 0 0;
+  pointer-events: none;
+  box-sizing: border-box;
+  color: #7A85BBFF;
+  box-shadow: 0 0 0 0 currentColor;
+  opacity: 0.2;
+}
+
+.button-wave.wave-motion-appear {
+  --cb-ease-out: cubic-bezier(0.08, 0.82, 0.17, 1);
+  transition: box-shadow 0.4s cubic-bezier(0.08, 0.82, 0.17, 1), opacity 2s cubic-bezier(0.08, 0.82, 0.17, 1);
+}
+
+.button-wave.wave-motion-appear-active {
+  box-shadow: 0 0 0 6px currentColor;
+  opacity: 0;
+}
+
+.button-wave.wave-motion-appear.wave-quick {
+  --cb-ease-in-out: cubic-bezier(0.78, 0.14, 0.15, 0.86)
+  transition: box-shadow 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86), opacity 0.35s cubic-bezier(0.78, 0.14, 0.15, 0.86);
 }
 
 /* CHECKBOX */
@@ -974,4 +1074,12 @@ th{
 
 .last\:mb-3:last-child{
   margin-bottom: 0.75rem;
+}
+
+.hover\:bg-blueish-200:hover{
+  background-color: #495778FF;
+}
+
+.hover\:bg-def-400:hover{
+  background-color: #343434FF;
 }
