--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -580,6 +580,14 @@ video {
   }
 }
 
+.pointer-events-none{
+  pointer-events: none;
+}
+
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -588,12 +596,28 @@ video {
   position: relative;
 }
 
+.inset-0{
+  inset: 0px;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
 .left-0{
   left: 0px;
 }
 
+.right-0{
+  right: 0px;
+}
+
 .top-0{
   top: 0px;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .mx-4{
@@ -631,6 +655,10 @@ video {
   height: fit-content;
 }
 
+.min-h-full{
+  min-height: 100%;
+}
+
 .w-3\/4{
   width: 75%;
 }
@@ -646,6 +674,10 @@ video {
 
 .min-w-80{
   min-width: 20rem;
+}
+
+.min-w-full{
+  min-width: 100%;
 }
 
 .cursor-not-allowed{
@@ -688,6 +720,14 @@ video {
   justify-content: space-evenly;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.overflow-y-hidden{
+  overflow-y: hidden;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -726,6 +766,10 @@ video {
 
 .bg-transparent{
   background-color: transparent;
+}
+
+.bg-white\/10{
+  background-color: rgb(255 255 255 / 0.1);
 }
 
 .p-0{
@@ -789,6 +833,14 @@ video {
 
 .text-def-300{
   color: #5F5F5FFF;
+}
+
+.opacity-5{
+  opacity: 0.05;
+}
+
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-colors{
@@ -896,6 +948,7 @@ th{
 }
 
 .card{
+  z-index: 20;
   border-radius: 0.5rem;
   border-width: 1px;
   border-color: rgb(0 0 0 / 0.4);
