--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -688,6 +688,10 @@ video {
   cursor: pointer;
 }
 
+.cursor-wait{
+  cursor: wait;
+}
+
 .list-none{
   list-style-type: none;
 }
@@ -720,6 +724,10 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .overflow-x-hidden{
   overflow-x: hidden;
 }
@@ -730,6 +738,10 @@ video {
 
 .whitespace-nowrap{
   white-space: nowrap;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-md{
@@ -748,12 +760,20 @@ video {
   border-top-right-radius: 0.5rem;
 }
 
+.border{
+  border-width: 1px;
+}
+
 .border-\[1px\]{
   border-width: 1px;
 }
 
 .border-black\/30{
   border-color: rgb(0 0 0 / 0.3);
+}
+
+.border-transparent{
+  border-color: transparent;
 }
 
 .bg-blueish-400{
@@ -772,8 +792,16 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }
 
+.stroke-def-200{
+  stroke: #AEAEAEFF;
+}
+
 .p-0{
   padding: 0px;
+}
+
+.p-1{
+  padding: 0.25rem;
 }
 
 .px-2{
@@ -912,6 +940,18 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  cursor: pointer;
+  color: #e8e8e8;
+}
+
+button.menu {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.1em 0.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
   color: #e8e8e8;
@@ -1078,7 +1118,7 @@ th{
 
 .loader {
   --color: #a5a5b0;
-  --size: 30px;
+  --size: 20px;
   width: var(--size);
   height: var(--size);
   display: grid;
@@ -1129,10 +1169,30 @@ th{
   margin-bottom: 0.75rem;
 }
 
+.hover\:border-black\/40:hover{
+  border-color: rgb(0 0 0 / 0.4);
+}
+
 .hover\:bg-blueish-200:hover{
   background-color: #495778FF;
 }
 
+.hover\:bg-blueish-400:hover{
+  background-color: #282C34FF;
+}
+
 .hover\:bg-def-400:hover{
   background-color: #343434FF;
+}
+
+.hover\:bg-transparent:hover{
+  background-color: transparent;
+}
+
+.hover\:bg-blueish-450:hover{
+  background-color: #2B2F38FF;
+}
+
+.hover\:stroke-def-100:hover{
+  stroke: #EBEBEBFF;
 }
