--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -616,8 +616,16 @@ video {
   top: 0px;
 }
 
+.left-2{
+  left: 0.5rem;
+}
+
 .z-10{
   z-index: 10;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .mx-4{
@@ -630,12 +638,26 @@ video {
   margin-bottom: 2rem;
 }
 
+.-mx-1{
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
+}
+
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
 .mb-16{
   margin-bottom: 4rem;
 }
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .flex{
@@ -655,6 +677,22 @@ video {
   height: fit-content;
 }
 
+.h-3{
+  height: 0.75rem;
+}
+
+.h-3\.5{
+  height: 0.875rem;
+}
+
+.h-4{
+  height: 1rem;
+}
+
+.h-px{
+  height: 1px;
+}
+
 .min-h-full{
   min-height: 100%;
 }
@@ -672,12 +710,28 @@ video {
   width: 100%;
 }
 
+.w-3{
+  width: 0.75rem;
+}
+
+.w-3\.5{
+  width: 0.875rem;
+}
+
+.w-4{
+  width: 1rem;
+}
+
 .min-w-80{
   min-width: 20rem;
 }
 
 .min-w-full{
   min-width: 100%;
+}
+
+.min-w-\[8rem\]{
+  min-width: 8rem;
 }
 
 .cursor-not-allowed{
@@ -690,6 +744,16 @@ video {
 
 .cursor-wait{
   cursor: wait;
+}
+
+.cursor-default{
+  cursor: default;
+}
+
+.select-none{
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .list-none{
@@ -726,6 +790,10 @@ video {
 
 .gap-2{
   gap: 0.5rem;
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .overflow-x-hidden{
@@ -776,6 +844,10 @@ video {
   border-color: transparent;
 }
 
+.border-black\/40{
+  border-color: rgb(0 0 0 / 0.4);
+}
+
 .bg-blueish-400{
   background-color: #282C34FF;
 }
@@ -790,6 +862,10 @@ video {
 
 .bg-white\/10{
   background-color: rgb(255 255 255 / 0.1);
+}
+
+.fill-current{
+  fill: currentColor;
 }
 
 .stroke-def-200{
@@ -834,6 +910,19 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-1\.5{
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
+}
+
+.pr-2{
+  padding-right: 0.5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -851,12 +940,25 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-medium{
   font-weight: 500;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .capitalize{
   text-transform: capitalize;
+}
+
+.tracking-widest{
+  letter-spacing: 0.1em;
 }
 
 .text-def-300{
@@ -867,12 +969,39 @@ video {
   opacity: 0.05;
 }
 
+.opacity-60{
+  opacity: 0.6;
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-colors{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-opacity{
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1165,6 +1294,10 @@ th{
   margin-top: 0.75rem;
 }
 
+.first\:bg-blueish-400:first-child{
+  background-color: #282C34FF;
+}
+
 .last\:mb-3:last-child{
   margin-bottom: 0.75rem;
 }
@@ -1193,6 +1326,18 @@ th{
   background-color: #2B2F38FF;
 }
 
+.hover\:bg-blueish-300:hover{
+  background-color: #3A4254FF;
+}
+
 .hover\:stroke-def-100:hover{
   stroke: #EBEBEBFF;
+}
+
+.data-\[disabled\]\:pointer-events-none[data-disabled]{
+  pointer-events: none;
+}
+
+.data-\[disabled\]\:opacity-50[data-disabled]{
+  opacity: 0.5;
 }
