--- a/src/tw/input.css
+++ b/src/tw/input.css
@@ -17,6 +17,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+
+  -webkit-tap-highlight-color: transparent;
 }
 
 a {
