--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -596,6 +596,10 @@ video {
   pointer-events: none;
 }
 
+.invisible{
+  visibility: hidden;
+}
+
 .fixed{
   position: fixed;
 }
@@ -638,6 +642,10 @@ video {
 
 .z-50{
   z-index: 50;
+}
+
+.m-0{
+  margin: 0px;
 }
 
 .-mx-1{
@@ -755,10 +763,6 @@ video {
   min-width: 100%;
 }
 
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .cursor-default{
   cursor: default;
 }
@@ -813,12 +817,16 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-1{
+  gap: 0.25rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
 
-.gap-1{
-  gap: 0.25rem;
+.gap-3{
+  gap: 0.75rem;
 }
 
 .overflow-hidden{
@@ -831,6 +839,10 @@ video {
 
 .overflow-y-hidden{
   overflow-y: hidden;
+}
+
+.overflow-x-visible{
+  overflow-x: visible;
 }
 
 .whitespace-nowrap{
@@ -867,6 +879,10 @@ video {
 
 .border-\[1px\]{
   border-width: 1px;
+}
+
+.border-0{
+  border-width: 0px;
 }
 
 .border-black\/30{
@@ -909,10 +925,6 @@ video {
 
 .fill-current{
   fill: currentColor;
-}
-
-.stroke-def-100{
-  stroke: #EBEBEBFF;
 }
 
 .stroke-def-200{
@@ -1020,6 +1032,10 @@ video {
   color: #5F5F5FFF;
 }
 
+.text-transparent{
+  color: transparent;
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1049,6 +1065,10 @@ video {
   outline-offset: 2px;
 }
 
+.outline-red-300{
+  outline-color: #fca5a5;
+}
+
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -1075,6 +1095,8 @@ video {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+  -webkit-tap-highlight-color: transparent;
 }
 
 a {
@@ -1351,32 +1373,14 @@ th{
   margin-bottom: 0.75rem;
 }
 
-.hover\:bg-blueish-200:hover{
-  background-color: #495778FF;
+.focus\:border-red-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.hover\:bg-blueish-300:hover{
-  background-color: #3A4254FF;
-}
-
-.hover\:bg-blueish-450:hover{
-  background-color: #2B2F38FF;
-}
-
-.hover\:bg-def-400:hover{
-  background-color: #343434FF;
-}
-
-.hover\:bg-transparent:hover{
-  background-color: transparent;
-}
-
-.hover\:stroke-def-100:hover{
-  stroke: #EBEBEBFF;
-}
-
-.hover\:stroke-def-200:hover{
-  stroke: #AEAEAEFF;
+.focus-visible\:border-red-500:focus-visible{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .data-\[disabled\]\:pointer-events-none[data-disabled]{
@@ -1385,4 +1389,34 @@ th{
 
 .data-\[disabled\]\:opacity-50[data-disabled]{
   opacity: 0.5;
+}
+
+@media (hover: hover){
+  .hover\:bg-blueish-200:hover{
+    background-color: #495778FF;
+  }
+
+  .hover\:bg-blueish-300:hover{
+    background-color: #3A4254FF;
+  }
+
+  .hover\:bg-blueish-450:hover{
+    background-color: #2B2F38FF;
+  }
+
+  .hover\:bg-def-400:hover{
+    background-color: #343434FF;
+  }
+
+  .hover\:bg-transparent:hover{
+    background-color: transparent;
+  }
+
+  .hover\:stroke-def-100:hover{
+    stroke: #EBEBEBFF;
+  }
+
+  .hover\:text-transparent:hover{
+    color: transparent;
+  }
 }
