--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -628,20 +628,44 @@ video {
   left: 0.5rem;
 }
 
+.left-\[50\%\]{
+  left: 50%;
+}
+
 .right-0{
   right: 0px;
+}
+
+.right-4{
+  right: 1rem;
 }
 
 .top-0{
   top: 0px;
 }
 
+.top-4{
+  top: 1rem;
+}
+
+.top-\[50\%\]{
+  top: 50%;
+}
+
 .z-10{
   z-index: 10;
 }
 
+.z-20{
+  z-index: 20;
+}
+
 .z-50{
   z-index: 50;
+}
+
+.z-\[9999\]{
+  z-index: 9999;
 }
 
 .m-0{
@@ -691,6 +715,10 @@ video {
 
 .table{
   display: table;
+}
+
+.grid{
+  display: grid;
 }
 
 .h-3{
@@ -763,6 +791,20 @@ video {
   min-width: 100%;
 }
 
+.max-w-lg{
+  max-width: 32rem;
+}
+
+.translate-x-\[-50\%\]{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-50\%\]{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-default{
   cursor: default;
 }
@@ -791,6 +833,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-col-reverse{
+  flex-direction: column-reverse;
 }
 
 .items-start{
@@ -825,8 +871,20 @@ video {
   gap: 0.5rem;
 }
 
-.gap-3{
-  gap: 0.75rem;
+.gap-4{
+  gap: 1rem;
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-1\.5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -839,10 +897,6 @@ video {
 
 .overflow-y-hidden{
   overflow-y: hidden;
-}
-
-.overflow-x-visible{
-  overflow-x: visible;
 }
 
 .whitespace-nowrap{
@@ -873,16 +927,16 @@ video {
   border-width: 1px;
 }
 
+.border-0{
+  border-width: 0px;
+}
+
 .border-2{
   border-width: 2px;
 }
 
 .border-\[1px\]{
   border-width: 1px;
-}
-
-.border-0{
-  border-width: 0px;
 }
 
 .border-black\/30{
@@ -901,6 +955,10 @@ video {
 .border-red-500{
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.bg-black\/80{
+  background-color: rgb(0 0 0 / 0.8);
 }
 
 .bg-blueish-200{
@@ -923,6 +981,14 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }
 
+.bg-white\/5{
+  background-color: rgb(255 255 255 / 0.05);
+}
+
+.bg-white\/90{
+  background-color: rgb(255 255 255 / 0.9);
+}
+
 .fill-current{
   fill: currentColor;
 }
@@ -941,6 +1007,10 @@ video {
 
 .p-4{
   padding: 1rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .px-2{
@@ -998,6 +1068,11 @@ video {
   font-size: 1.5rem;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1018,6 +1093,14 @@ video {
 
 .capitalize{
   text-transform: capitalize;
+}
+
+.leading-none{
+  line-height: 1;
+}
+
+.tracking-tight{
+  letter-spacing: -0.025em;
 }
 
 .tracking-widest{
@@ -1048,6 +1131,22 @@ video {
   opacity: 0.6;
 }
 
+.opacity-70{
+  opacity: 0.7;
+}
+
+.opacity-10{
+  opacity: 0.1;
+}
+
+.opacity-\[0\.02\]{
+  opacity: 0.02;
+}
+
+.opacity-\[0\.05\]{
+  opacity: 0.05;
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1065,10 +1164,6 @@ video {
   outline-offset: 2px;
 }
 
-.outline-red-300{
-  outline-color: #fca5a5;
-}
-
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -1077,6 +1172,16 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.transition-opacity{
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
 }
 
 .ease-out{
@@ -1099,6 +1204,17 @@ video {
   -webkit-tap-highlight-color: transparent;
 }
 
+*{
+  border-radius: 0.125rem;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+*:focus-visible{
+  outline-color: #54669DFF;
+  --tw-ring-color: #54669DFF;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -1112,6 +1228,28 @@ a:hover {
 body {
   background: radial-gradient(circle at center, #282c34 0%, #1c1e24 100%);
   min-height : 100vh;
+}
+
+.translate-center  {
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+
+.first-layer {
+  z-index : 9999;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
@@ -1146,6 +1284,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   color: #e8e8e8;
+  /* outline: -webkit-focus-ring-color auto 5px #535bf2; */
 }
 
 button.menu {
@@ -1192,7 +1331,6 @@ th{
 }
 
 .card{
-  z-index: 20;
   border-radius: 0.5rem;
   border-width: 1px;
   border-color: rgb(0 0 0 / 0.4);
@@ -1373,14 +1511,23 @@ th{
   margin-bottom: 0.75rem;
 }
 
-.focus\:border-red-500:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
-.focus-visible\:border-red-500:focus-visible{
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+.focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-offset-2:focus{
+  --tw-ring-offset-width: 2px;
+}
+
+.disabled\:pointer-events-none:disabled{
+  pointer-events: none;
 }
 
 .data-\[disabled\]\:pointer-events-none[data-disabled]{
@@ -1418,5 +1565,33 @@ th{
 
   .hover\:text-transparent:hover{
     color: transparent;
+  }
+
+  .hover\:opacity-100:hover{
+    opacity: 1;
+  }
+}
+
+@media (min-width: 640px){
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:justify-end{
+    justify-content: flex-end;
+  }
+
+  .sm\:space-x-2 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .sm\:rounded-lg{
+    border-radius: 0.5rem;
+  }
+
+  .sm\:text-left{
+    text-align: left;
   }
 }
