--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -947,6 +947,10 @@ video {
   border-color: rgb(0 0 0 / 0.4);
 }
 
+.border-blueish-400{
+  border-color: #282C34FF;
+}
+
 .border-green-500{
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
@@ -1208,6 +1212,11 @@ a:hover {
 body {
   background: radial-gradient(circle at center, #282c34 0%, #1c1e24 100%);
   min-height : 100vh;
+}
+
+div[data-state="open"][aria-hidden="true"][data-aria-hidden="true"]{
+  background-color: #242424FF;
+  opacity: 0.7;
 }
 
 .translate-center  {
